Implement urllib2 HTTP client.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Implement urllib2 HTTP client.
+  [jone]
+
 - Implement urllib HTTP client.
   [jone]
 
