--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -8,7 +8,7 @@ Changelog
 - Plone: send component and action too.
   [jone]
 
-- Plone: remove keys containing "pass" from request data
+- Plone: remove keys containing "pass" from request data and session cookie.
   We should not send the users password on registration / login failures.
   [jone]
 
