--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Plone: refactor cleanups to cleanup cookies in all places.
+  [jone]
 
 
 1.1.1 (2013-09-02)
