--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix TypeError with Python 2.6 and Plone.
+  [jone]
 
 
 1.1.2 (2013-09-02)
