Log errors happening while handling errors.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.6 (unreleased)
 ------------------
 
+- Log errors happening while handling errors.
+  [jone]
+
 - Make get_ignore_regex() look in a default location for the ignore file.
   [lgraf]
 
