--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.6 (unreleased)
 ------------------
 
+- Post "unknown" app version when ERRBIT_PACKAGE is invalid.
+  [jone]
+
 - Log errors happening while handling errors.
   [jone]
 
