Implement JavaScript error reporting.
The profile "errbit-ploneintegration:default" must be installed.

https://github.com/airbrake/airbrake-js is used for reporting the errors.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,9 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement JavaScript error reporting.
+  The profile "errbit-ploneintegration:default" must be installed.
+  [jone]
 
 
 1.2.1 (2015-03-02)
