--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix type error when having non-strings as keys in request's cgi-data.
+  [jone]
 
 
 1.2.0 (2015-02-27)
