--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix bug when trying to log a cleanup error.
+  [jone]
 
 
 1.3.0 (2015-03-02)
