--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add uninstall profile for Plone integration.
+  [jone]
 
 
 1.3.1 (2015-08-10)
